# pixlink

./: CMakeLists.txt  LICENSE  README.md
doc/: OVERVIEW.md
include/faceDetector/: face_detector.hpp
include/pipeline/: faces_meta.hpp  opencv_specializations.hpp  pipeline.hpp  region_filter.hpp  region_pipeline.hpp  strategy.hpp  strategy_default.hpp  strategy_lru.hpp
src/: main.cpp
